# QLCraft

./: .gitignore
RT1011/00_CFG/: MIMXRT1011xxxxx_ram.ld  flags.cmake  sdkconfig.cmake
RT1011/01_startup/: CMakeLists.txt
RT1011/01_startup/src/: main.c
RT1011/01_startup/src/board/: board.h  board_clock_config.c  board_flexspi_nor_config.c  board_pin_mux.c
