
SET(CMAKE_SYSTEM_NAME Generic)
CMAKE_MINIMUM_REQUIRED (VERSION 3.10.0)

set(VERSION_MAJOR 1)
set(VERSION_MINOR 0)

ENABLE_LANGUAGE(ASM)

set(CMAKE_STATIC_LIBRARY_PREFIX)
set(CMAKE_STATIC_LIBRARY_SUFFIX)

set(CMAKE_EXECUTABLE_LIBRARY_PREFIX)
set(CMAKE_EXECUTABLE_LIBRARY_SUFFIX)

SET(PROJECT_DIRECTORY_PATH ${CMAKE_CURRENT_SOURCE_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})

project(installation)

set(QLCRAFT_PROJECT_OUTPUT_NAME installation.elf)

include(${PROJECT_DIRECTORY_PATH}/../00_CFG/flags.cmake)

add_executable(${QLCRAFT_PROJECT_OUTPUT_NAME} 
    "${PROJECT_DIRECTORY_PATH}/src/main.c"
    "${PROJECT_DIRECTORY_PATH}/src/board/board.c"
    "${PROJECT_DIRECTORY_PATH}/src/board/board_pin_mux.c"
    "${PROJECT_DIRECTORY_PATH}/src/board/board_clock_config.c"
    "${PROJECT_DIRECTORY_PATH}/src/board/board_system.c"
    "${PROJECT_DIRECTORY_PATH}/src/board/board_flexspi_nor_config.c"
)

target_include_directories(${QLCRAFT_PROJECT_OUTPUT_NAME} PRIVATE
    ${PROJECT_DIRECTORY_PATH}/inc
    ${PROJECT_DIRECTORY_PATH}/src/board
)

include(${PROJECT_DIRECTORY_PATH}/../00_CFG/sdkconfig.cmake)

TARGET_LINK_LIBRARIES(${QLCRAFT_PROJECT_OUTPUT_NAME} PRIVATE -Wl,--start-group)

target_link_libraries(${QLCRAFT_PROJECT_OUTPUT_NAME} PRIVATE m)

target_link_libraries(${QLCRAFT_PROJECT_OUTPUT_NAME} PRIVATE c)

target_link_libraries(${QLCRAFT_PROJECT_OUTPUT_NAME} PRIVATE gcc)

target_link_libraries(${QLCRAFT_PROJECT_OUTPUT_NAME} PRIVATE nosys)

TARGET_LINK_LIBRARIES(${QLCRAFT_PROJECT_OUTPUT_NAME} PRIVATE -Wl,--end-group)
